--- a/galeria.html
+++ b/galeria.html
@@ -57,13 +57,13 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="caracteristicas.html">Características</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="anatomia.html">Anatomía</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="galeria.html">Galería</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="metamorfosis.html">Metamorfosis</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="alimentacion.html">Alimentación</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">Referencia</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">Autor</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="anatomia.html">Anatomía</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="galeria.html">Galería</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="metamorfosis.html">Metamorfosis</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="alimentacion.html">Alimentación</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">Referencia</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="autor.html">Autor</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-s7SGQR05Bk" id="header16-j">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header1 cid-s7SGQR05Bk" id="header16-j">
 
     
 
